--- a/src/laguntzaile/BenevolesBundle/Resources/views/Default/candidatureEffectuee.html.twig
+++ b/src/laguntzaile/BenevolesBundle/Resources/views/Default/candidatureEffectuee.html.twig
@@ -2,7 +2,7 @@
 
 {% block contenuCentral %}
 
-    <h3>Etre bénévole pour l'événement {{evenement.nom}}</h3>
-    <span class="glyphicons glyphicons-ok-2" style="color=green">Candidature envoyée.</span>
+    <h3>{% trans %}Etre bénévole pour l'événement {% endtrans %}{{evenement.nom}}</h3>
+    <span class="glyphicons glyphicons-ok-2" style="color=green">{% trans %}Candidature envoyée.{% endtrans %}</span>
   
 {% endblock %}
