--- a/src/laguntzaile/BenevolesBundle/Resources/views/Default/affectation.html.twig
+++ b/src/laguntzaile/BenevolesBundle/Resources/views/Default/affectation.html.twig
@@ -1,27 +1,30 @@
 {% extends "::vueMere.html.twig" %}
 
+{% block bandeau %}
+<div class="bandeau">
+    <div class="panel panel-default">
+        <h4 class="centrer">{{(personneEtEvenement[0].idEvenement.nom)}}{% include "laguntzaileBenevolesBundle:Default:langue.html.twig" %}</h4>
+    </div>
+</div>
+{% endblock %}
+
 {% block contenuCentral %}
-
-        <div class="panel panel-default">
-            <h4 class="centrer">{{(personneEtEvenement[0].idEvenement.nom)}}</h4>
-        </div>
-        <br />
-
+    <div class="blockCentral">
 <h4>{{(personneEtEvenement[0].idPersonne.prenom)}} {{(personneEtEvenement[0].idPersonne.nom)}},</h4>
         <br />
         {% if tabAffectationsDejaTraitees|length != 0 %}
             {% if tabAffectationsDejaTraitees|length != 0 %}
-                <p>Voici l'affectation que vous avez déjà traité : </p>
+                <p>{% trans %}Voici l'affectation que vous avez déjà traité : {% endtrans %}</p>
             {% else %}
-                <p>Voici la liste des affectations que vous avez déjà traité : </p>
+                <p>{% trans %}Voici la liste des affectations que vous avez déjà traité : {% endtrans %}</p>
             {% endif %}
                 <br />
-<table class="table">
+<table class="table-responsive">
                 <thead>
                   <tr>
-                    <th>Poste</th>
-                    <th>Tour</th>
-                    <th>Choix</th>
+                    <th>{% trans %}Poste{% endtrans %}</th>
+                    <th>{% trans %}Tour{% endtrans %}</th>
+                    <th>{% trans %}Choix{% endtrans %}</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -32,18 +35,18 @@
                          
                          {% if affectation.idTour.debut|date("d") == affectation.idTour.fin|date("d") %}
                          
-                            <td>Le {{affectation.idTour.debut|date("d/m/Y")}}, de {{affectation.idTour.debut|date("H:i")}} à {{affectation.idTour.fin|date("H:i")}} </td>
+                            <td>{% trans %}Le{% endtrans %} {{affectation.idTour.debut|date("d/m/Y")}}, {% trans %}de{% endtrans %} {{affectation.idTour.debut|date("H:i")}} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("H:i")}} </td>
                          
                          {% else %}
                          
-                            <td>De {{affectation.idTour.debut|date("d/m/Y H:i") }} à {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
+                            <td>{% trans %}De{% endtrans %} {{affectation.idTour.debut|date("d/m/Y H:i") }} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
                          
                          {% endif %}
                             <td>
                                 {% if affectation.statut == "acceptee" %}
-                                    <p>Acceptée</p>
+                                    <p>{% trans %}Acceptée{% endtrans %}</p>
                                 {% else %}
-                                    <p>Refusée</p>
+                                    <p>{% trans %}Refusée{% endtrans %}</p>
                                 {% endif %}
                             </td>
                         </tr>
@@ -54,12 +57,12 @@
         {% endif %}
         
         {% if tabAffectations|length == 0 %}
-            <p class="centrer"> <em>Aucune propositions d'affectation pour l'instant.</em></p>
+            <p class="centrer"> <em>{% trans %}Aucune propositions d'affectation pour l'instant.{% endtrans %}</em></p>
         {% else %}
             {% if tabAffectations|length == 1 %}
-                <p> Voici l'affectation qui vous est proposée :</p>
+                <p> {% trans %}Voici l'affectation qui vous est proposée :{% endtrans %}</p>
             {% elseif tabAffectations|length > 1 %}
-                <p> Voici la liste des affectations qui vous sont proposées :</p>
+                <p> {% trans %}Voici la liste des affectations qui vous sont proposées :{% endtrans %}</p>
             {% endif %}
      
 <form method="post" {{form_enctype(formulaireAffectation)}}  novalidate="novalidate" >
@@ -71,9 +74,9 @@
                 
                 <thead>
                   <tr>
-                    <th>Poste</th>
-                    <th>Tour</th>
-                    <th id="titreColonnePoste" hidden=true>Choix</th>
+                    <th>{% trans %}Poste{% endtrans %}</th>
+                    <th>{% trans %}Tour{% endtrans %}</th>
+                    <th id="titreColonnePoste" hidden=true>{% trans %}Choix{% endtrans %}</th>
                   </tr>
 
                     
@@ -87,11 +90,11 @@
                          
                          {% if affectation.idTour.debut|date("d") == affectation.idTour.fin|date("d") %}
                          
-                            <td>Le {{affectation.idTour.debut|date("d/m/Y")}}, de {{affectation.idTour.debut|date("H:i")}} à {{affectation.idTour.fin|date("H:i")}} </td>
+                            <td>{% trans %}Le{% endtrans %} {{affectation.idTour.debut|date("d/m/Y")}}, {% trans %}de{% endtrans %} {{affectation.idTour.debut|date("H:i")}} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("H:i")}} </td>
                          
                          {% else %}
                          
-                            <td>De {{affectation.idTour.debut|date("d/m/Y H:i") }} à {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
+                            <td>{% trans %}De{% endtrans %} {{affectation.idTour.debut|date("d/m/Y H:i") }} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
                          
                          {% endif %}
                             <td id="coupleDeBoutons{{nb}}" hidden=true>
@@ -110,10 +113,10 @@
     
     <div name="bouton" class="centrer"> 
             {{form_widget(formulaireAffectation["maCaseACocher"])}}{{form_label(formulaireAffectation["maCaseACocher"])}}</p>
-            <input class="btn btn-primary" type="submit" value="Envoyer !">
+            <input class="btn btn-primary" type="submit" value="{% trans %}Envoyer !{% endtrans %}">
     </div>
     </form>
-
+    </div>
 
 <script type="text/javascript">
 function test(ele)
