--- a/src/laguntzaile/BenevolesBundle/Resources/views/Default/langue.html.twig
+++ b/src/laguntzaile/BenevolesBundle/Resources/views/Default/langue.html.twig
@@ -1,9 +1,9 @@
 <div class="droite" style="padding-right:20px">            
-    <a href="ActionMetierChangerDeLangue">
+    <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'fr'})) }}">
         <img src="{{ asset('images/drapeauFrancais.png') }}"  height="20" width="30"/>
     </a>
 
-    <a href="ActionMetierChangerDeLangue">
+    <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'eu'})) }}">
         <img src="{{ asset('images/drapeauBasque.png') }}" height="20" width="30"/>
     </a>
 </div>
