--- a/src/laguntzaile/BenevolesBundle/Resources/views/Default/affectation.html.twig
+++ b/src/laguntzaile/BenevolesBundle/Resources/views/Default/affectation.html.twig
@@ -9,168 +9,113 @@
 {% endblock %}
 
 {% block contenuCentral %}
-    <div class="blockCentral">
-<h4>{{(personneEtEvenement[0].idPersonne.prenom)}} {{(personneEtEvenement[0].idPersonne.nom)}},</h4>
-        <br />
-        {% if tabAffectationsDejaTraitees|length != 0 %}
-            {% if tabAffectationsDejaTraitees|length != 0 %}
-                <p>{% trans %}Voici l'affectation que vous avez déjà traité : {% endtrans %}</p>
-            {% else %}
-                <p>{% trans %}Voici la liste des affectations que vous avez déjà traité : {% endtrans %}</p>
-            {% endif %}
-                <br />
-<table class="table-responsive">
-                <thead>
-                  <tr>
-                    <th>{% trans %}Poste{% endtrans %}</th>
-                    <th>{% trans %}Tour{% endtrans %}</th>
-                    <th>{% trans %}Choix{% endtrans %}</th>
-                  </tr>
-                </thead>
-                <tbody>
+<div class="blockCentral">
+    <h4>{{(personneEtEvenement[0].idPersonne.prenom)}} {{(personneEtEvenement[0].idPersonne.nom)}},</h4>
+    <br />
+    {% if tabAffectationsDejaTraitees|length != 0 %}
+    {% if tabAffectationsDejaTraitees|length != 0 %}
+    <p>{% trans %}Voici l'affectation que vous avez déjà traité : {% endtrans %}</p>
+    {% else %}
+    <p>{% trans %}Voici la liste des affectations que vous avez déjà traité : {% endtrans %}</p>
+    {% endif %}
+    <br />
+    <table class="table">
+        <thead>
+            <tr>
+                <th>{% trans %}Poste{% endtrans %}</th>
+                <th>{% trans %}Tour{% endtrans %}</th>
+                <th>{% trans %}Choix{% endtrans %}</th>
+            </tr>
+        </thead>
+        <tbody>
             {% for affectation in tabAffectationsDejaTraitees %}
 
-                     <tr>
-                            <td>{{affectation.idTour.idPoste.nom}}</td>
-                         
-                         {% if affectation.idTour.debut|date("d") == affectation.idTour.fin|date("d") %}
-                         
-                            <td>{% trans %}Le{% endtrans %} {{affectation.idTour.debut|date("d/m/Y")}}, {% trans %}de{% endtrans %} {{affectation.idTour.debut|date("H:i")}} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("H:i")}} </td>
-                         
-                         {% else %}
-                         
-                            <td>{% trans %}De{% endtrans %} {{affectation.idTour.debut|date("d/m/Y H:i") }} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
-                         
-                         {% endif %}
-                            <td>
-                                {% if affectation.statut == "acceptee" %}
-                                    <p>{% trans %}Acceptée{% endtrans %}</p>
-                                {% else %}
-                                    <p>{% trans %}Refusée{% endtrans %}</p>
-                                {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-               </tbody>
-            </table>
-        <br />
-        {% endif %}
-        
-        {% if tabAffectations|length == 0 %}
-            <p class="centrer"> <em>{% trans %}Aucune propositions d'affectation pour l'instant.{% endtrans %}</em></p>
-        {% else %}
-            {% if tabAffectations|length == 1 %}
-                <p> {% trans %}Voici l'affectation qui vous est proposée :{% endtrans %}</p>
-            {% elseif tabAffectations|length > 1 %}
-                <p> {% trans %}Voici la liste des affectations qui vous sont proposées :{% endtrans %}</p>
-            {% endif %}
-     
-<form method="post" {{form_enctype(formulaireAffectation)}}  novalidate="novalidate" >
-            <table class="table">
-                
-                <col id="tailleColonneTableau1" width="50%">
-                <col id="tailleColonneTableau2" width="50%">
-                <col id="tailleColonneTableau3" width="0%">
-                
-                <thead>
-                  <tr>
+            <tr>
+                <td>{{affectation.idTour.idPoste.nom}}</td>
+
+                {% if affectation.idTour.debut|date("d") == affectation.idTour.fin|date("d") %}
+
+                <td>{% trans %}Le{% endtrans %} {{affectation.idTour.debut|date("d/m/Y")}}, {% trans %}de{% endtrans %} {{affectation.idTour.debut|date("H:i")}} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("H:i")}} </td>
+
+                {% else %}
+
+                <td>{% trans %}De{% endtrans %} {{affectation.idTour.debut|date("d/m/Y H:i") }} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
+
+                {% endif %}
+                <td>
+                    {% if affectation.statut == "acceptee" %}
+                    <p>{% trans %}Acceptée{% endtrans %}</p>
+                    {% else %}
+                    <p>{% trans %}Refusée{% endtrans %}</p>
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <br />
+    {% endif %}
+
+    {% if tabAffectations|length == 0 %}
+    <p class="centrer"> <em>{% trans %}Aucune propositions d'affectation pour l'instant.{% endtrans %}</em></p>
+    {% else %}
+    {% if tabAffectations|length == 1 %}
+    <p> {% trans %}Voici l'affectation qui vous est proposée :{% endtrans %}</p>
+    {% elseif tabAffectations|length > 1 %}
+    <p> {% trans %}Voici la liste des affectations qui vous sont proposées :{% endtrans %}</p>
+    {% endif %}
+
+    <form method="post" {{form_enctype(formulaireAffectation)}}  novalidate="novalidate" >
+        <table class="table">
+
+            <col id="tailleColonneTableau1" width="50%">
+            <col id="tailleColonneTableau2" width="50%">
+            <col id="tailleColonneTableau3" width="0%">
+
+            <thead>
+                <tr>
                     <th>{% trans %}Poste{% endtrans %}</th>
                     <th>{% trans %}Tour{% endtrans %}</th>
                     <th id="titreColonnePoste" hidden=true>{% trans %}Choix{% endtrans %}</th>
-                  </tr>
+                </tr>
 
-                    
-                </thead>
-                <tbody>
-                   {% set nb=0 %}
-                   {% for affectation in tabAffectations %}
 
-                     <tr>
-                            <td class="nomDuPoste">{{affectation.idTour.idPoste.nom}}</td>
-                         
-                         {% if affectation.idTour.debut|date("d") == affectation.idTour.fin|date("d") %}
-                         
-                            <td>{% trans %}Le{% endtrans %} {{affectation.idTour.debut|date("d/m/Y")}}, {% trans %}de{% endtrans %} {{affectation.idTour.debut|date("H:i")}} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("H:i")}} </td>
-                         
-                         {% else %}
-                         
-                            <td>{% trans %}De{% endtrans %} {{affectation.idTour.debut|date("d/m/Y H:i") }} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
-                         
-                         {% endif %}
-                            <td id="coupleDeBoutons{{nb}}" hidden=true>
-                                {{form_widget(formulaireAffectation["radio" ~ affectation.id])}}
-                                <br />
-                                <span id="span_form_radio{{affectation.id}}" hidden=true>
-                                    {{form_widget(formulaireAffectation["commentaire" ~ affectation.id])}}
-                                </span>
-                            </td>
-                        </tr>
-                    {% set nb=nb+1 %}
-                    {% endfor %}
-               </tbody>
-            </table>
+            </thead>
+            <tbody>
+                {% set affectationCourante=0 %}
+                {% for affectation in tabAffectations %}
 
-    
-    <div name="bouton" class="centrer"> 
+                <tr>
+                    <td class="nomDuPoste">{{affectation.idTour.idPoste.nom}}</td>
+
+                    {% if affectation.idTour.debut|date("d") == affectation.idTour.fin|date("d") %}
+
+                    <td>{% trans %}Le{% endtrans %} {{affectation.idTour.debut|date("d/m/Y")}}, {% trans %}de{% endtrans %} {{affectation.idTour.debut|date("H:i")}} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("H:i")}} </td>
+
+                    {% else %}
+
+                    <td>{% trans %}De{% endtrans %} {{affectation.idTour.debut|date("d/m/Y H:i") }} {% trans %}à{% endtrans %} {{affectation.idTour.fin|date("d/m/Y H:i")}}</td>
+
+                    {% endif %}
+                    <td id="coupleDeBoutons{{affectationCourante}}" hidden=true>
+                        {{form_widget(formulaireAffectation["radio" ~ affectation.id])}}
+                        <br />
+                        <span id="span_form_radio{{affectation.id}}" hidden=true>
+                            {{form_widget(formulaireAffectation["commentaire" ~ affectation.id])}}
+                        </span>
+                    </td>
+                </tr>
+                {% set affectationCourante=affectationCourante+1 %}
+                {% endfor %}
+            </tbody>
+        </table>
+
+
+        <div name="bouton" class="centrer"> 
             {{form_widget(formulaireAffectation["maCaseACocher"])}}{{form_label(formulaireAffectation["maCaseACocher"])}}</p>
-            <input class="btn btn-primary" type="submit" value="{% trans %}Envoyer !{% endtrans %}">
-    </div>
+        <input class="btn btn-primary" type="submit" value="{% trans %}Envoyer !{% endtrans %}">
+        </div>
     </form>
-    </div>
-
-<script type="text/javascript">
-function test(ele)
-{
-    idElementCourant = ele.id; // ça c'est bon
-    concatenation = idElementCourant+"_1";
-    elementRadio = document.getElementById(concatenation);
-    spanAModifier = document.getElementById("span_"+idElementCourant);
-    
-
-    spanAModifier.setAttribute('hidden', 'true'); // Pour faire réapparaître
-    
-    if(elementRadio.checked == true)
-    {
-        spanAModifier.removeAttribute('hidden'); // Pour supprimer le hidden       
-    }
-    else
-    {
-        spanAModifier.setAttribute('hidden', 'true'); // Pour faire réapparaître
-    }
-}
-    
-function cacher(ele)
-{
-    var caseACocher=document.getElementById(ele.id);
-    var titreColonne = document.getElementById("titreColonnePoste");
-
-    
-    if (caseACocher.checked)
-    {
-        titreColonne.setAttribute('hidden','true');
-        document.getElementById("tailleColonneTableau1").setAttribute('width','50%');
-        document.getElementById("tailleColonneTableau2").setAttribute('width','50%');
-        for (i=0; i<{{nb}}; i++)
-        {
-           document.getElementById("coupleDeBoutons"+i).setAttribute('hidden','true');
-         document.getElementById("coupleDeBoutons"+i).children[0].children[0].setAttribute('checked','true');
-        }
-        
-    }
-    else
-    {
-        titreColonne.removeAttribute('hidden');
-        document.getElementById("tailleColonneTableau1").setAttribute('width','30%');
-        document.getElementById("tailleColonneTableau2").setAttribute('width','40%');
-        document.getElementById("tailleColonneTableau3").setAttribute('width','30%');
-        for (i=0; i<{{nb}}; i++)
-        {
-           document.getElementById("coupleDeBoutons"+i).removeAttribute('hidden');
-            document.getElementById("coupleDeBoutons"+i).children[0].children[0].setAttribute('checked','true');
-        }
-    }
-}
-    
-</script>
-        {% endif %}
+</div>
+{% endif %}
 {% endblock %}
