--- a/src/laguntzaile/BenevolesBundle/Resources/views/Default/candidatureEffectuee.html.twig
+++ b/src/laguntzaile/BenevolesBundle/Resources/views/Default/candidatureEffectuee.html.twig
@@ -1,8 +1,11 @@
 {% extends "::vueMere.html.twig" %}
 
 {% block contenuCentral %}
-
-    <h3>{% trans %}Etre bénévole pour l'événement {% endtrans %}{{evenement.nom}}</h3>
-    <span class="glyphicons glyphicons-ok-2" style="color=green">{% trans %}Candidature envoyée.{% endtrans %}</span>
+    <center>
+        <div class="alert alert-success" role="alert" style="width:35%">
+            <h3 class="centrer">{% trans %}Etre bénévole pour l'événement {% endtrans %} : {{evenement.nom}}</h3>
+            <span class="centrer">{% trans %}Candidature envoyée.{% endtrans %}</span>
+        </div>
+</center>
   
 {% endblock %}
